syntax = "proto3";
package pb;
option go_package = "github.com/wetrycode/tegenaria/service/pb";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message StatusContorlRequest {
    // @inject_tag: json:"status"
    TegenariaStatus Status = 1 [json_name = "status"];
    // @inject_tag: json:"spider_name"
    string SpiderName=2 [json_name = "spider_name"];
}
message ResponseMessage {
    // @gotags: json:"code"
    int32 Code=1 [json_name = "code"];
    // @gotags: json:"msg"
    string Msg=2 [json_name = "msg"];
    // @gotags: json:"data"
    google.protobuf.Struct Data=3 [json_name = "data"];
}
enum ResponseStatus {
  UNKNOWN=0;
  OK=1000;
  UNKNOWN_ERROR=5000;
  NOT_FOUND_SPIDER=50001;

}
enum TegenariaStatus{
    ON_START=0;
    ON_STOP=1;

    ON_PAUSE=2;
}
message TegenariaStatusMessage {
    // @inject_tag: json:"status"
    string Status=1;
    // @inject_tag: json:"start_at"
    string StartAt=2;
    // @inject_tag: json:"stop_at"
    string StopAt=3;
    // @inject_tag: json:"duration"
    double Duration=4;
    // @inject_tag: json:"metrics"
    map<string,uint64> Metrics = 5;
    // @inject_tag: json:"spider_name" 
    string SpiderName=6;

}
service TegenariaService {
  rpc SetStatus(StatusContorlRequest) returns (ResponseMessage) {
    option (google.api.http) = {
        post: "/api/v1/tegenaria/status"
        body: "*"
      };
  }
  rpc GetStatus(google.protobuf.Empty)returns(ResponseMessage) {
    option (google.api.http) = {
        get: "/api/v1/tegenaria/status"
      };
  }
}